--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,3 +1,5 @@
+<!-- Custom CSS and fonts to match the brand -->
+
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script>
   WebFont.load({
@@ -9,12 +11,11 @@
 
 <style>
   body {
-    letter-spacing: .57px;
     -webkit-font-smoothing: antialiased;
     font-family: "Roboto",sans-serif;
     color: #2e2d2c;
     margin: 0;
-    font-size: 1rem;
+    font-size: 100%;
     font-weight: 400;
     line-height: 1.5;
     background-color: #fff;
@@ -22,7 +23,42 @@
     -webkit-tap-highlight-color: rgba(46,45,44,0);
   }
 
-  * {
-    box-sizing: content-box;
+  #docs-root {
+    font-size: 1.2rem;
+  }
+
+  #docs-root .sbdocs-h1,
+  #docs-root .sbdocs-h2,
+  #docs-root .sbdocs-h3,
+  #docs-root .sbdocs-h4,
+  #docs-root .sbdocs-h5,
+  #docs-root .sbdocs-h6,
+  #docs-root .sbdocs-p {
+    font-family: "Roboto", sans-serif;
+  }
+
+  #docs-root .sbdocs-h2 {
+    font-size: 1.8rem;
+  }
+
+  #docs-root .sbdocs-p,
+  #docs-root table {
+    font-size: 1rem;
+  }
+
+  #docs-root .docblock-code-toggle,
+  #docs-root .docblock-source button {
+    font-size: .9rem;
+  }
+
+  #docs-root table td:first-of-type,
+  #docs-root table td:last-of-type,
+  #docs-root table th:first-of-type,
+  #docs-root table th:last-of-type {
+    width: 10%;
+  }
+
+  #docs-root .sbdocs-wrapper {
+    background: #f5f5f5;
   }
 </style>
