--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -4,8 +4,8 @@
 <script>
   WebFont.load({
     google: {
-      families: ['Roboto:400,500,600,700']
-    }
+      families: ['Roboto:400,500,600,700'],
+    },
   });
 </script>
 
@@ -17,6 +17,11 @@
   .sidebar-header button {
     color: #2e2d2c;
     box-shadow: #2e2d2c 0 0 0 1px inset;
+  }
+
+  .dark .sidebar-header button {
+    color: #ccc;
+    box-shadow: #ccc 0 0 0 1px inset;
   }
 
   .sidebar-header button:hover {
@@ -48,20 +53,29 @@
     border-radius: 0;
   }
 
+  .dark #storybook-explorer-searchfield {
+    background-color: #2e2d2c;
+    color: #ddd;
+  }
+
   #storybook-explorer-searchfield:hover,
   #storybook-explorer-searchfield:focus {
-    background: #ededed;
     border-bottom-color: #d93c31;
   }
 
   #storybook-explorer-tree .sidebar-subheading,
   #storybook-explorer-menu .search-result-recentlyOpened {
     font-size: 1rem;
-    letter-spacing: .1rem;
+    letter-spacing: 0.1rem;
     font-weight: 700;
     margin-top: 30px;
     margin-bottom: 12px;
     color: #2e2d2c;
+  }
+
+  .dark #storybook-explorer-tree .sidebar-subheading,
+  .dark #storybook-explorer-menu .search-result-recentlyOpened {
+    color: #ccc;
   }
 
   #storybook-explorer-menu .search-result-item--label,
@@ -93,7 +107,7 @@
     width: 16px;
     height: 16px;
     margin-top: 1px;
-    transition: left .2s;
+    transition: left 0.2s;
     left: 0;
   }
 
@@ -103,13 +117,13 @@
     line-height: 1.5;
   }
 
-  #root .os-content {
-    background: #fff;
-  }
-
   #root ~ * {
     filter: none;
     -webkit-filter: none;
     box-shadow: 0 0 5px 0 rgb(0 0 0 / 30%);
+  }
+
+  .dark #root ~ * {
+    background: #333;
   }
 </style>
