--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -4,23 +4,21 @@
 <script>
   WebFont.load({
     google: {
-      families: ['Roboto:400,500,600,700']
-    }
+      families: ['Roboto:400,500,600,700'],
+    },
   });
 </script>
 
 <style>
   body {
     -webkit-font-smoothing: antialiased;
-    font-family: "Roboto",sans-serif;
-    color: #2e2d2c;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     font-size: 100%;
     font-weight: 400;
     line-height: 1.5;
-    background-color: #fff;
     -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: rgba(46,45,44,0);
+    -webkit-tap-highlight-color: rgba(46, 45, 44, 0);
   }
 
   #docs-root {
@@ -34,7 +32,7 @@
   #docs-root .sbdocs-h5,
   #docs-root .sbdocs-h6,
   #docs-root .sbdocs-p {
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
   }
 
   #docs-root .sbdocs-h2 {
@@ -48,7 +46,7 @@
 
   #docs-root .docblock-code-toggle,
   #docs-root .docblock-source button {
-    font-size: .9rem;
+    font-size: 0.9rem;
   }
 
   #docs-root table td:first-of-type,
@@ -56,9 +54,5 @@
   #docs-root table th:first-of-type,
   #docs-root table th:last-of-type {
     width: 10%;
-  }
-
-  #docs-root .sbdocs-wrapper {
-    background: #f5f5f5;
   }
 </style>
