Customize navigation for dark mode, Limit logo max-width

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -28,6 +28,10 @@
     box-shadow: #d93c31 0 0 0 1px inset;
   }
 
+  .sidebar-header img {
+    max-width: 170px;
+  }
+
   .search-field > svg {
     width: 16px;
     height: 16px;
