--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,17 +1,18 @@
+<!DOCTYPE html>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script>
   WebFont.load({
     google: {
-      families: ['Roboto:400,500,600,700']
-    }
+      families: ['Roboto:400,500,600,700'],
+    },
   });
 </script>
 
 <style>
   body {
-    letter-spacing: .57px;
+    letter-spacing: 0.57px;
     -webkit-font-smoothing: antialiased;
-    font-family: "Roboto",sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: #2e2d2c;
     margin: 0;
     font-size: 1rem;
@@ -19,10 +20,10 @@
     line-height: 1.5;
     background-color: #fff;
     -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: rgba(46,45,44,0);
+    -webkit-tap-highlight-color: rgba(46, 45, 44, 0);
   }
 
   * {
-    box-sizing: content-box;
+    box-sizing: border-box !important;
   }
 </style>
