Fix color contrast in search results section, Align dark mode icon

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -127,7 +127,22 @@
     box-shadow: 0 0 5px 0 rgb(0 0 0 / 30%);
   }
 
-  .dark #root ~ * {
-    background: #333;
+  .dark .search-result-item--label span {
+    color: white;
+  }
+
+  .dark input#storybook-explorer-searchfield {
+    background: #212121;
+  }
+
+  .light .search-result-back svg,
+  .light .search-result-back span,
+  .light .search-result-clearHistory svg,
+  .light .search-result-clearHistory span {
+    color: black;
+  }
+
+  svg#Capa_1 {
+    margin-top: 0 !important;
   }
 </style>
