--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -55,4 +55,615 @@
   #docs-root table th:last-of-type {
     width: 10%;
   }
+
+  /**
+ * One Dark theme for prism.js
+ * Based on Atom's One Dark theme: https://github.com/atom/atom/tree/master/packages/one-dark-syntax
+ */
+
+  /**
+ * One Dark colours (accurate as of commit 8ae45ca on 6 Sep 2018)
+ * From colors.less
+ * --mono-1: hsl(220, 14%, 71%);
+ * --mono-2: hsl(220, 9%, 55%);
+ * --mono-3: hsl(220, 10%, 40%);
+ * --hue-1: hsl(187, 47%, 55%);
+ * --hue-2: hsl(207, 82%, 66%);
+ * --hue-3: hsl(286, 60%, 67%);
+ * --hue-4: hsl(95, 38%, 62%);
+ * --hue-5: hsl(356, 75%, 68%);
+ * --hue-5-2: hsl(5, 48%, 51%);
+ * --hue-6: hsl(29, 54%, 61%);
+ * --hue-6-2: hsl(39, 67%, 69%);
+ * --syntax-fg: hsl(220, 14%, 71%);
+ * --syntax-bg: hsl(220, 13%, 18%);
+ * --syntax-gutter: hsl(220, 14%, 45%);
+ * --syntax-guide: hsla(220, 14%, 71%, 0.15);
+ * --syntax-accent: hsl(220, 100%, 66%);
+ * From syntax-variables.less
+ * --syntax-selection-color: hsl(220, 13%, 28%);
+ * --syntax-gutter-background-color-selected: hsl(220, 13%, 26%);
+ * --syntax-cursor-line: hsla(220, 100%, 80%, 0.04);
+ */
+
+  .os-content .prismjs code[class*='language-'],
+  .os-content .prismjs pre[class*='language-'] {
+    background: hsl(220, 13%, 18%);
+    color: hsl(220, 14%, 71%);
+    text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+    font-family: 'Fira Code', 'Fira Mono', Menlo, Consolas, 'DejaVu Sans Mono',
+      monospace;
+    direction: ltr;
+    text-align: left;
+    white-space: pre;
+    word-spacing: normal;
+    word-break: normal;
+    line-height: 1.5;
+    -moz-tab-size: 2;
+    -o-tab-size: 2;
+    tab-size: 2;
+    -webkit-hyphens: none;
+    -moz-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
+  }
+
+  /* Selection */
+  .os-content .prismjs code[class*='language-']::-moz-selection,
+  .os-content .prismjs code[class*='language-'] *::-moz-selection,
+  .os-content .prismjs pre[class*='language-'] *::-moz-selection {
+    background: hsl(220, 13%, 28%);
+    color: inherit;
+    text-shadow: none;
+  }
+
+  .os-content .prismjs code[class*='language-']::selection,
+  .os-content .prismjs code[class*='language-'] *::selection,
+  .os-content .prismjs pre[class*='language-'] *::selection {
+    background: hsl(220, 13%, 28%);
+    color: inherit;
+    text-shadow: none;
+  }
+
+  /* Code blocks */
+  .os-content .prismjs pre[class*='language-'] {
+    padding: 1em;
+    margin: 0.5em 0;
+    overflow: auto;
+    border-radius: 0.3em;
+  }
+
+  /* Inline code */
+  .os-content .prismjs :not(pre) > code[class*='language-'] {
+    padding: 0.2em 0.3em;
+    border-radius: 0.3em;
+    white-space: normal;
+  }
+
+  /* Print */
+  @media print {
+    code[class*='language-'],
+    pre[class*='language-'] {
+      text-shadow: none;
+    }
+  }
+
+  .os-content .prismjs .token.comment,
+  .os-content .prismjs .token.prolog,
+  .os-content .prismjs .token.cdata {
+    color: hsl(220, 10%, 40%);
+  }
+
+  .os-content .prismjs .token.doctype,
+  .os-content .prismjs .token.punctuation,
+  .os-content .prismjs .token.entity {
+    color: hsl(220, 14%, 71%);
+  }
+
+  .os-content .prismjs .token.attr-name,
+  .os-content .prismjs .token.class-name,
+  .os-content .prismjs .token.boolean,
+  .os-content .prismjs .token.constant,
+  .os-content .prismjs .token.number,
+  .os-content .prismjs .token.atrule {
+    color: hsl(29, 54%, 61%);
+  }
+
+  .os-content .prismjs .token.keyword {
+    color: hsl(286, 60%, 67%);
+  }
+
+  .os-content .prismjs .token.property,
+  .os-content .prismjs .token.tag,
+  .os-content .prismjs .token.symbol,
+  .os-content .prismjs .token.deleted,
+  .os-content .prismjs .token.important {
+    color: hsl(356, 75%, 68%);
+  }
+
+  .os-content .prismjs .token.selector,
+  .os-content .prismjs .token.string,
+  .os-content .prismjs .token.char,
+  .os-content .prismjs .token.builtin,
+  .os-content .prismjs .token.inserted,
+  .os-content .prismjs .token.regex,
+  .os-content .prismjs .token.attr-value,
+  .os-content .prismjs .token.attr-value > .token.punctuation {
+    color: hsl(95, 38%, 62%);
+  }
+
+  .os-content .prismjs .token.variable,
+  .os-content .prismjs .token.operator,
+  .os-content .prismjs .token.function {
+    color: hsl(207, 82%, 66%);
+  }
+
+  .os-content .prismjs .token.url {
+    color: hsl(187, 47%, 55%);
+  }
+
+  /* HTML overrides */
+  .os-content .prismjs .token.attr-value > .token.punctuation.attr-equals,
+  .os-content
+    .prismjs
+    .token.special-attr
+    > .token.attr-value
+    > .token.value.css {
+    color: hsl(220, 14%, 71%);
+  }
+
+  /* CSS overrides */
+  .os-content .prismjs .language-css .token.selector {
+    color: hsl(356, 75%, 68%);
+  }
+
+  .os-content .prismjs .language-css .token.property {
+    color: hsl(220, 14%, 71%);
+  }
+
+  .os-content .prismjs .language-css .token.function,
+  .os-content .prismjs .language-css .token.url > .token.function {
+    color: hsl(187, 47%, 55%);
+  }
+
+  .os-content .prismjs .language-css .token.url > .token.string.url {
+    color: hsl(95, 38%, 62%);
+  }
+
+  .os-content .prismjs .language-css .token.important,
+  .os-content .prismjs .language-css .token.atrule .token.rule {
+    color: hsl(286, 60%, 67%);
+  }
+
+  /* JS overrides */
+  .os-content .prismjs .language-javascript .token.operator {
+    color: hsl(286, 60%, 67%);
+  }
+
+  .os-content
+    .prismjs
+    .language-javascript
+    .token.template-string
+    > .token.interpolation
+    > .token.interpolation-punctuation.punctuation {
+    color: hsl(5, 48%, 51%);
+  }
+
+  /* JSON overrides */
+  .os-content .prismjs .language-json .token.operator {
+    color: hsl(220, 14%, 71%);
+  }
+
+  .os-content .prismjs .language-json .token.null.keyword {
+    color: hsl(29, 54%, 61%);
+  }
+
+  /* MD overrides */
+  .os-content .prismjs .language-markdown .token.url,
+  .os-content .prismjs .language-markdown .token.url > .token.operator,
+  .os-content
+    .prismjs
+    .language-markdown
+    .token.url-reference.url
+    > .token.string {
+    color: hsl(220, 14%, 71%);
+  }
+
+  .os-content .prismjs .language-markdown .token.url > .token.content {
+    color: hsl(207, 82%, 66%);
+  }
+
+  .os-content .prismjs .language-markdown .token.url > .token.url,
+  .os-content .prismjs .language-markdown .token.url-reference.url {
+    color: hsl(187, 47%, 55%);
+  }
+
+  .os-content .prismjs .language-markdown .token.blockquote.punctuation,
+  .os-content .prismjs .language-markdown .token.hr.punctuation {
+    color: hsl(220, 10%, 40%);
+    font-style: italic;
+  }
+
+  .os-content .prismjs .language-markdown .token.code-snippet {
+    color: hsl(95, 38%, 62%);
+  }
+
+  .os-content .prismjs .language-markdown .token.bold .token.content {
+    color: hsl(29, 54%, 61%);
+  }
+
+  .os-content .prismjs .language-markdown .token.italic .token.content {
+    color: hsl(286, 60%, 67%);
+  }
+
+  .os-content .prismjs .language-markdown .token.strike .token.content,
+  .os-content .prismjs .language-markdown .token.strike .token.punctuation,
+  .os-content .prismjs .language-markdown .token.list.punctuation,
+  .os-content
+    .prismjs
+    .language-markdown
+    .token.title.important
+    > .token.punctuation {
+    color: hsl(356, 75%, 68%);
+  }
+
+  /* General */
+  .os-content .prismjs .token.bold {
+    font-weight: bold;
+  }
+
+  .os-content .prismjs .token.comment,
+  .os-content .prismjs .token.italic {
+    font-style: italic;
+  }
+
+  .os-content .prismjs .token.entity {
+    cursor: help;
+  }
+
+  .os-content .prismjs .token.namespace {
+    opacity: 0.8;
+  }
+
+  /* Plugin overrides */
+  /* Selectors should have higher specificity than those in the plugins' default stylesheets */
+
+  /* Show Invisibles plugin overrides */
+  .os-content .prismjs .token.token.tab:not(:empty):before,
+  .os-content .prismjs .token.token.cr:before,
+  .os-content .prismjs .token.token.lf:before,
+  .os-content .prismjs .token.token.space:before {
+    color: hsla(220, 14%, 71%, 0.15);
+    text-shadow: none;
+  }
+
+  /* Toolbar plugin overrides */
+  /* Space out all buttons and move them away from the right edge of the code block */
+  .os-content .prismjs div.code-toolbar > .toolbar.toolbar > .toolbar-item {
+    margin-right: 0.4em;
+  }
+
+  /* Styling the buttons */
+  .os-content
+    .prismjs
+    div.code-toolbar
+    > .toolbar.toolbar
+    > .toolbar-item
+    > button,
+  .os-content .prismjs div.code-toolbar > .toolbar.toolbar > .toolbar-item > a,
+  .os-content
+    .prismjs
+    div.code-toolbar
+    > .toolbar.toolbar
+    > .toolbar-item
+    > span {
+    background: hsl(220, 13%, 26%);
+    color: hsl(220, 9%, 55%);
+    padding: 0.1em 0.4em;
+    border-radius: 0.3em;
+  }
+
+  .os-content
+    .prismjs
+    div.code-toolbar
+    > .toolbar.toolbar
+    > .toolbar-item
+    > button:hover,
+  .os-content
+    .prismjs
+    div.code-toolbar
+    > .toolbar.toolbar
+    > .toolbar-item
+    > button:focus,
+  .os-content
+    .prismjs
+    div.code-toolbar
+    > .toolbar.toolbar
+    > .toolbar-item
+    > a:hover,
+  .os-content
+    .prismjs
+    div.code-toolbar
+    > .toolbar.toolbar
+    > .toolbar-item
+    > a:focus,
+  .os-content
+    .prismjs
+    div.code-toolbar
+    > .toolbar.toolbar
+    > .toolbar-item
+    > span:hover,
+  .os-content
+    .prismjs
+    div.code-toolbar
+    > .toolbar.toolbar
+    > .toolbar-item
+    > span:focus {
+    background: hsl(220, 13%, 28%);
+    color: hsl(220, 14%, 71%);
+  }
+
+  /* Line Highlight plugin overrides */
+  /* The highlighted line itself */
+  .os-content .prismjs .line-highlight.line-highlight {
+    background: hsla(220, 100%, 80%, 0.04);
+  }
+
+  /* Default line numbers in Line Highlight plugin */
+  .os-content .prismjs .line-highlight.line-highlight:before,
+  .os-content .prismjs .line-highlight.line-highlight[data-end]:after {
+    background: hsl(220, 13%, 26%);
+    color: hsl(220, 14%, 71%);
+    padding: 0.1em 0.6em;
+    border-radius: 0.3em;
+    box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.2); /* same as Toolbar plugin default */
+  }
+
+  /* Hovering over a linkable line number (in the gutter area) */
+  /* Requires Line Numbers plugin as well */
+  .os-content
+    .prismjs
+    pre[id].linkable-line-numbers.linkable-line-numbers
+    span.line-numbers-rows
+    > span:hover:before {
+    background-color: hsla(220, 100%, 80%, 0.04);
+  }
+
+  /* Line Numbers and Command Line plugins overrides */
+  /* Line separating gutter from coding area */
+  .os-content .prismjs .line-numbers.line-numbers .line-numbers-rows,
+  .os-content .prismjs .command-line .command-line-prompt {
+    border-right-color: hsla(220, 14%, 71%, 0.15);
+  }
+
+  /* Stuff in the gutter */
+  .os-content .prismjs .line-numbers .line-numbers-rows > span:before,
+  .os-content .prismjs .command-line .command-line-prompt > span:before {
+    color: hsl(220, 14%, 45%);
+  }
+
+  /* Match Braces plugin overrides */
+  /* Note: Outline colour is inherited from the braces */
+  .os-content .prismjs .rainbow-braces .token.token.punctuation.brace-level-1,
+  .os-content .prismjs .rainbow-braces .token.token.punctuation.brace-level-5,
+  .os-content .prismjs .rainbow-braces .token.token.punctuation.brace-level-9 {
+    color: hsl(356, 75%, 68%);
+  }
+
+  .os-content .prismjs .rainbow-braces .token.token.punctuation.brace-level-2,
+  .os-content .prismjs .rainbow-braces .token.token.punctuation.brace-level-6,
+  .os-content .prismjs .rainbow-braces .token.token.punctuation.brace-level-10 {
+    color: hsl(95, 38%, 62%);
+  }
+
+  .os-content .prismjs .rainbow-braces .token.token.punctuation.brace-level-3,
+  .os-content .prismjs .rainbow-braces .token.token.punctuation.brace-level-7,
+  .os-content .prismjs .rainbow-braces .token.token.punctuation.brace-level-11 {
+    color: hsl(207, 82%, 66%);
+  }
+
+  .os-content .prismjs .rainbow-braces .token.token.punctuation.brace-level-4,
+  .os-content .prismjs .rainbow-braces .token.token.punctuation.brace-level-8,
+  .os-content .prismjs .rainbow-braces .token.token.punctuation.brace-level-12 {
+    color: hsl(286, 60%, 67%);
+  }
+
+  /* Diff Highlight plugin overrides */
+  /* Taken from https://github.com/atom/github/blob/master/styles/variables.less */
+  .os-content
+    .prismjs
+    pre.diff-highlight
+    > code
+    .token.token.deleted:not(.prefix),
+  .os-content
+    .prismjs
+    pre
+    > code.diff-highlight
+    .token.token.deleted:not(.prefix) {
+    background-color: hsla(353, 100%, 66%, 0.15);
+  }
+
+  .os-content
+    .prismjs
+    pre.diff-highlight
+    > code
+    .token.token.deleted:not(.prefix)::-moz-selection,
+  .os-content
+    .prismjs
+    pre.diff-highlight
+    > code
+    .token.token.deleted:not(.prefix)
+    *::-moz-selection,
+  .os-content
+    .prismjs
+    pre
+    > code.diff-highlight
+    .token.token.deleted:not(.prefix)::-moz-selection,
+  .os-content
+    .prismjs
+    pre
+    > code.diff-highlight
+    .token.token.deleted:not(.prefix)
+    *::-moz-selection {
+    background-color: hsla(353, 95%, 66%, 0.25);
+  }
+
+  .os-content
+    .prismjs
+    pre.diff-highlight
+    > code
+    .token.token.deleted:not(.prefix)::selection,
+  .os-content
+    .prismjs
+    pre.diff-highlight
+    > code
+    .token.token.deleted:not(.prefix)
+    *::selection,
+  .os-content
+    .prismjs
+    pre
+    > code.diff-highlight
+    .token.token.deleted:not(.prefix)::selection,
+  .os-content
+    .prismjs
+    pre
+    > code.diff-highlight
+    .token.token.deleted:not(.prefix)
+    *::selection {
+    background-color: hsla(353, 95%, 66%, 0.25);
+  }
+
+  .os-content
+    .prismjs
+    pre.diff-highlight
+    > code
+    .token.token.inserted:not(.prefix),
+  .os-content
+    .prismjs
+    pre
+    > code.diff-highlight
+    .token.token.inserted:not(.prefix) {
+    background-color: hsla(137, 100%, 55%, 0.15);
+  }
+
+  .os-content
+    .prismjs
+    pre.diff-highlight
+    > code
+    .token.token.inserted:not(.prefix)::-moz-selection,
+  .os-content
+    .prismjs
+    pre.diff-highlight
+    > code
+    .token.token.inserted:not(.prefix)
+    *::-moz-selection,
+  .os-content
+    .prismjs
+    pre
+    > code.diff-highlight
+    .token.token.inserted:not(.prefix)::-moz-selection,
+  .os-content
+    .prismjs
+    pre
+    > code.diff-highlight
+    .token.token.inserted:not(.prefix)
+    *::-moz-selection {
+    background-color: hsla(135, 73%, 55%, 0.25);
+  }
+
+  .os-content
+    .prismjs
+    pre.diff-highlight
+    > code
+    .token.token.inserted:not(.prefix)::selection,
+  .os-content
+    .prismjs
+    pre.diff-highlight
+    > code
+    .token.token.inserted:not(.prefix)
+    *::selection,
+  .os-content
+    .prismjs
+    pre
+    > code.diff-highlight
+    .token.token.inserted:not(.prefix)::selection,
+  .os-content
+    .prismjs
+    pre
+    > code.diff-highlight
+    .token.token.inserted:not(.prefix)
+    *::selection {
+    background-color: hsla(135, 73%, 55%, 0.25);
+  }
+
+  /* Previewers plugin overrides */
+  /* Based on https://github.com/atom-community/atom-ide-datatip/blob/master/styles/atom-ide-datatips.less and https://github.com/atom/atom/blob/master/packages/one-dark-ui */
+  /* Border around popup */
+  .os-content .prismjs .prism-previewer.prism-previewer:before,
+  .os-content .prismjs .prism-previewer-gradient.prism-previewer-gradient div {
+    border-color: hsl(224, 13%, 17%);
+  }
+
+  /* Angle and time should remain as circles and are hence not included */
+  .os-content .prismjs .prism-previewer-color.prism-previewer-color:before,
+  .os-content .prismjs .prism-previewer-gradient.prism-previewer-gradient div,
+  .os-content .prismjs .prism-previewer-easing.prism-previewer-easing:before {
+    border-radius: 0.3em;
+  }
+
+  /* Triangles pointing to the code */
+  .os-content .prismjs .prism-previewer.prism-previewer:after {
+    border-top-color: hsl(224, 13%, 17%);
+  }
+
+  .os-content .prismjs .prism-previewer-flipped.prism-previewer-flipped.after {
+    border-bottom-color: hsl(224, 13%, 17%);
+  }
+
+  /* Background colour within the popup */
+  .os-content .prismjs .prism-previewer-angle.prism-previewer-angle:before,
+  .os-content .prismjs .prism-previewer-time.prism-previewer-time:before,
+  .os-content .prismjs .prism-previewer-easing.prism-previewer-easing {
+    background: hsl(219, 13%, 22%);
+  }
+
+  /* For angle, this is the positive area (eg. 90deg will display one quadrant in this colour) */
+  /* For time, this is the alternate colour */
+  .os-content .prismjs .prism-previewer-angle.prism-previewer-angle circle,
+  .os-content .prismjs .prism-previewer-time.prism-previewer-time circle {
+    stroke: hsl(220, 14%, 71%);
+    stroke-opacity: 1;
+  }
+
+  /* Stroke colours of the handle, direction point, and vector itself */
+  .os-content .prismjs .prism-previewer-easing.prism-previewer-easing circle,
+  .os-content .prismjs .prism-previewer-easing.prism-previewer-easing path,
+  .os-content .prismjs .prism-previewer-easing.prism-previewer-easing line {
+    stroke: hsl(220, 14%, 71%);
+  }
+
+  /* Fill colour of the handle */
+  .os-content .prismjs .prism-previewer-easing.prism-previewer-easing circle {
+    fill: transparent;
+  }
+
+  /* Custom overrides */
+
+  .os-content .prismjs .token.attr-name {
+    color: hsl(29, 54%, 61%);
+  }
+
+  .os-content .prismjs .token.punctuation {
+    color: hsl(220, 14%, 71%);
+  }
+
+  .os-content .prismjs code[class*='language-'],
+  .os-content .prismjs pre[class*='language-'] {
+    background: #212121;
+  }
+
+  .docblock-source,
+  pre.prismjs {
+    background: #212121 !important;
+  }
 </style>
