--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -142,7 +142,7 @@
     color: black;
   }
 
-  svg#Capa_1 {
+  [role='main'] .os-content button svg {
     margin-top: 0 !important;
   }
 </style>
